[package]
name = "redisfs"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.14"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
slog = "2.7"
slog-term = "2.9"
slog-async = "2.7"
slog-scope = "4.4"
redis = { version = "0.26.1", features = ["tokio-comp", "aio", "connection-manager"] }
env_logger = "0.11.5"
snafu = "0.8.4"
slog-envlogger = "2.2.0"